# Tlib

./: CMakeLists.txt  README.md
Tlib/: inttypes.h  list.h  math.h
Tlib/math/: barycentric_coordinates.h  float.h  floattypes.h  matrix.h  vector.h
tests/double-linked-list/: double-linked-list.c
tests/math/: float.c  matrix.c  vector.c
